# ecdsafail-challenge

./: .gitignore  Cargo.toml  NOTICE  README.md  ROADMAP.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.note  autoresearch.retrospective.md  autoresearch.sh  benchmark.json  benchmark.sh  lefthook.yml  results.tsv  setup.sh
.github/workflows/: ci.yml
analysis/: README.md  completeness_argument.md  cost_model.py  ecdlp_estimate.py  run.sh  scientific-value.md
analysis/adr/: 0001-analysis-layer-isolated-from-score.md  0002-derived-ecdlp-ladder-factor.md  0003-ground-ecdlp-estimate-in-source-paper.md  0004-cross-validate-against-reference-circuits.md  0005-validate-lookup-by-construction.md  0006-adder-completeness-approach.md  0007-tier-b-measured-ladder.md  0008-empirical-completeness-collision-rate.md  0009-direct-lookup-init.md  0010-measured-windowed-lookup-cost.md  0011-streamed-full-ladder.md  0012-classical-vs-quantum-addend-gap.md  0012-offset-window-encoding.md  0013-quantum-addend-width-gap.md  0014-quantum-addend-testbed.md  0015-offset-window-encoding.md  README.md
analysis/verify/: completeness_collision_rate.py  controlled_lookup.py  direct_lookup_init.py  kickmix_sim.py  ladder_lookup_cost.py  offset_window_encoding.py  peephole_identities.py  run_kani.sh  solinas_reduction.py  validate_reference_adders.py
experiment_memory/: 001_plan.md
src/: circuit.rs  kani_proofs.rs  lib.rs  main.rs  point_add.rs
src/point_add/: addend_width.rs  builder.rs  (+62 more)
tools/: README.md  qmap_explorer.py  qmap_instrumentation.patch
(+310 files in other folders)
