[package]
name = "quantum_ecc"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "build_circuit"
path = "src/bin/build_circuit.rs"

[[bin]]
name = "eval_circuit"
path = "src/bin/eval_circuit.rs"

# Analysis-only: measures circuit depth from ops.bin -> depth.json.
# Does not run the simulator or touch score.json.
[[bin]]
name = "depth_report"
path = "src/bin/depth_report.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

[dependencies]
alloy-primitives = "1.5"
ruint = "1.12"
sha3 = "0.10"
zstd = "0.13"
